layout issues on persistent navbar

--- a/themes/default/modules/actionbar.css
+++ b/themes/default/modules/actionbar.css
@@ -30,7 +30,6 @@
       box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.067);
   }
 
-
 ul, ol {
     padding: 0px;
     margin: 0px 0px 10px 25px;
@@ -57,7 +56,8 @@ li {
     margin: 0px 10px 0px 0px;
 }
 .navbar .nav.pull-right {
-    float: right;
+    /*float: right;*/
+    float: left;
     margin-right: 0px;
 }
 .navbar .nav > li {
@@ -152,7 +152,7 @@ box-shadow: inset 0 1px 1px hsl(0, 100%, 100%), 0 2px 3px hsla(0, 0%, 0%, 0.7);
   text-shadow: 0 1px white;
 }
 .navbar .nav > li {
-    width: 60px;
+    width: 100px;
     height: 52px;
     position: relative;
     padding: 10px 0;
@@ -163,11 +163,11 @@ box-shadow: inset 0 1px 1px hsl(0, 100%, 100%), 0 2px 3px hsla(0, 0%, 0%, 0.7);
 }
 .navbar .nav > li i {
     position:absolute;
-    left: 25px;
+    left: 40px;
 }
 
 .navbar-inverse .nav > li {
-    width: 60px;
+    width: 75px;
     height: 52px;
     position: relative;
     padding: 10px 0;
