--- a/themes/default/modules/card.css
+++ b/themes/default/modules/card.css
@@ -46,7 +46,7 @@
 .dataflow-node-inspector-inputs label {
   position:relative;
   padding: 15px 20px 10px;
-  border-top: 1px solid hsla(0, 0%, 0%, .3);
+  border-top: 1px solid hsla(0, 0%, 0%, .1);
   border-bottom: 1px solid hsl(220, 10%, 16%);
   display: block;
   background-color: hsla(0, 100%, 0%, 0.1);
